a100Output/slurmOutputs/oldOuts/slurm-29143359.out
==============================================
Hostname: fg4
Job ID: 29143359
Node: fg4
  File "DAFTTrain.py", line 54
    model = DAFT(
    ^
IndentationError: unexpected indent
==============================================
Start: 2024-04-13 01:35:04
End: 2024-04-13 01:35:04
